支持构建成native程序